--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,48 +1,123 @@
 # reference: https://github.com/BUMETCS673/seprojects-cs673olf24team1/blob/main/.github/workflows/github-actions.yml
+
 name: CI Pipeline
 
 on:
   push:
     branches:
-      - '**'   # This will run on any branch
+      - main
+      - stage
+      - develop
     paths:
-      - "code/**"
-      - "tests/**"
-  pull_request:
-    branches:
-      - '**'   # Run on PRs from any branch
+      - "frontend/**"
+      - "backend/**"
+      - "ai_service/**"
 
 jobs:
   # Job 1: Lint and Test React Frontend
   frontend:
     name: React Frontend Linting and Testing
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'frontend') || contains(github.event.commits[*].message, 'frontend')
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: 16
+
+      - name: Install dependencies
+        run: cd frontend && npm install
+
+      - name: Lint React code
+        run: cd frontend && npm run lint
+
+      - name: Run React Unit Tests
+        run: cd frontend && npm test
+
+  # Job 2: Build and Test Spring Boot Backend
+  backend:
+    name: Spring Boot Backend Build and Test
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'backend') || contains(github.event.commits[*].message, 'backend')
+
+    services:
+      mongo:
+        image: mongo:4.4
+        ports:
+          - 27017:27017
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: chat_db
+        ports:
+          - 5432:5432
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+
+      - name: Build and Test Spring Boot
+        run: |
+          cd backend
+          ./mvnw clean install
+          ./mvnw test
+      - name: Run Integration Tests
+        run: cd backend && ./mvnw verify
+
+  # Job 3: Lint, Test, and Deploy Python AI Service
+  python-ai-service:
+    name: Python AI Service Linting and Testing
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'ai_service') || contains(github.event.commits[*].message, 'ai_service')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          cd code/
-          npm install
+          cd ai_service
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+      - name: Lint Python code
+        run: cd ai_service && flake8 .
 
-      - name: Install ESLint
-        run: |
-          cd code/
-          npm install eslint eslint-plugin-react eslint-plugin-react-hooks --save-dev
+      - name: Run Python Unit Tests
+        run: cd ai_service && pytest
 
-      - name: Lint React code
+      - name: Run Integration Test for Hugging Face API
         run: |
-          cd code/
-          npx eslint . --fix || true
+          cd ai_service
+          source venv/bin/activate
+          python test_huggingface_integration.py
+  # Shared Job: Super-Linter
+  super-lint:
+    name: Lint code base
+    runs-on: ubuntu-latest
 
-      - name: Run React Unit Tests
-        run: |
-          cd code/
-          npm test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run Super-Linter
+        uses: github/super-linter@v4
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
