--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-# reference: https://github.com/BUMETCS673/seprojects-cs673olf24team1/blob/main/.github/workflows/github-actions.yml
+# reference: https://github.com/BUMETCS673/seprojects-cs673olf24team1/blob/ea3a0785bd0eaaa063c90f6f7ff99dbeabb6ba34/.github/workflows/github-actions.yml
 
 name: CI Pipeline
 
@@ -7,39 +7,48 @@ on:
     branches:
       - '**' 
     paths:
-      - "frontend/**"
-      - "backend/**"
+      - "code/frontend/**"
+      - "code/backend/**"
+      - "tests/**"
+
+  pull_request:
+    branches:
+      - '**'   # Run on PRs from any branch
+
 
 jobs:
   # Job 1: Lint and Test React Frontend
   frontend:
     name: React Frontend Linting and Testing
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'frontend') || contains(github.event.commits[*].message, 'frontend')
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 22
 
       - name: Install dependencies
-        run: cd frontend && npm install
+        run: |
+          cd code/frontend
+          npm install
+
+      - name: Install ESLint
+        run: |
+          cd code/frontend
+          npm install eslint eslint-plugin-react eslint-plugin-react-hooks --save-dev
 
       - name: Lint React code
-        run: cd frontend && npm run lint
+        run: |
+          cd code/frontend
+          npx eslint . --fix || true
 
       - name: Run React Unit Tests
-        run: cd frontend && npm test
+        run: |
+          cd code/frontend
+          npm test
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
+  ## NEED TO SET UP BACKEND CHECKS
