Fix github actions path to the right path

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - '**' 
     paths:
-      - "code/frontend/**"
-      - "code/backend/**"
+      - "code/Study buddy/frontend/**"
+      - "code/Study buddy/backend/**"
       - "tests/**"
 
   pull_request:
