--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -4,11 +4,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "start": "expo start",
-     "android": "expo run:android",
-     "ios": "expo run:ios",
-     "web": "expo start --web",
-     "test": "jest"
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.17",
@@ -29,8 +30,16 @@
   },
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "jest": "^30.2.0"
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "@eslint/js": "^9.0.0",
+    "globals": "^13.24.0"
   }
 }
