--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -3,6 +3,7 @@
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -20,7 +21,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
@@ -28,18 +29,20 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
-  "private": true,
   "devDependencies": {
     "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
+    "babel-jest": "^30.2.0",
+    "babel-preset-expo": "^10.0.0",
+
+    "eslint": "^9.37.0",
+    "@eslint/js": "^9.37.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "globals": "^13.24.0",
+
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "babel-jest": "^30.2.0",
-    "jest": "^30.2.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "@eslint/js": "^9.0.0",
-    "globals": "^13.24.0"
+    "jest": "^30.2.0"
   }
 }
