--- a/code/Study buddy/backend/package.json
+++ b/code/Study buddy/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest --detectOpenHandles"
+    "dev": "nodemon server.js",
+    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -23,13 +24,17 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
   },
   "jest": {
-    "testMatch": [
-      "**/__tests__/**/*.test.js"
-    ]
+    "testEnvironment": "node",
+    "testTimeout": 20000,
+    "clearMocks": true,
+    "restoreMocks": true,
+    "setupFiles": ["<rootDir>/__tests__/setupEnv.js"],
+    "testMatch": ["**/__tests__/**/*.test.js"]
   }
 }
