--- a/code/Study buddy/backend/package.json
+++ b/code/Study buddy/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "lint": "eslint ."
+
   },
   "keywords": [],
   "author": "",
