--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -28,18 +28,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
+    "@eslint/js": "^9.37.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-native": "^13.3.3",
     "babel-jest": "^30.2.0",
     "babel-preset-expo": "^10.0.0",
-
     "eslint": "^9.37.0",
-    "@eslint/js": "^9.37.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-native": "^5.0.0",
     "globals": "^13.24.0",
-
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.12",
+    "react-test-renderer": "^19.1.0"
   }
 }
