--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -19,7 +19,7 @@
     "expo-checkbox": "~5.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "18.3.1",
     "react-native": "0.81.4",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
@@ -28,6 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.27.1",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.37.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/jest-native": "^5.4.3",
@@ -42,6 +45,22 @@
     "globals": "^13.24.0",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.12",
-    "react-test-renderer": "^19.1.0"
+    "react-test-renderer": "18.3.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/"
+    ]
   }
 }
