--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -28,14 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.27.1",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@eslint/js": "^9.37.0",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/react-native": "^13.3.3",
     "babel-jest": "^30.2.0",
     "babel-preset-expo": "^10.0.0",
     "eslint": "^9.37.0",
@@ -43,9 +38,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-native": "^5.0.0",
     "globals": "^13.24.0",
-    "jest": "^29.7.0",
-    "jest-expo": "^54.0.12",
-    "react-test-renderer": "18.3.1"
+    "jest": "^29.7.0"
   },
   "jest": {
     "testEnvironment": "node",
