--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -9,7 +9,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll=false",
+    "test": "jest --config ./jest.config.js --watchAll=false",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -19,41 +19,27 @@
     "expo-checkbox": "~5.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "18.3.1",
-    "react-native": "0.81.4",
+    "react": "18.2.0",
+    "react-native": "0.76.5",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "@eslint/js": "^9.37.0",
-    "babel-jest": "^30.2.0",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.25.9",
+    "babel-jest": "29.7.0",
     "babel-preset-expo": "^10.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "@testing-library/react-native": "^12.5.1",
+    "react-test-renderer": "18.2.0",
     "eslint": "^9.37.0",
+    "@eslint/js": "^9.37.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-native": "^5.0.0",
-    "globals": "^13.24.0",
-    "jest": "^29.7.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/__tests__/**/*.test.js"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/"
-    ]
+    "globals": "^13.24.0"
   }
 }
