Add linting for backend CI

--- a/code/Study buddy/backend/Dockerfile
+++ b/code/Study buddy/backend/Dockerfile
@@ -11,6 +11,7 @@ WORKDIR /app
 
 # Copy only package manifests first for caching
 COPY package*.json ./
+COPY eslint.config.js ./
 
 # Install dependencies cleanly
 RUN npm install  # install all dependencies including devDependencies
