--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -17,10 +17,15 @@
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.10",
     "expo-checkbox": "~5.0.7",
+    "expo-dev-client": "~6.0.15",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "18.2.0",
-    "react-native": "0.76.5",
+
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-web": "^0.21.0",
+
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
@@ -34,7 +39,9 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "@testing-library/react-native": "^12.5.1",
-    "react-test-renderer": "18.2.0",
+
+    "react-test-renderer": "19.1.0",
+
     "eslint": "^9.37.0",
     "@eslint/js": "^9.37.0",
     "eslint-plugin-react": "^7.37.2",
