--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -9,7 +9,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --config ./jest.config.js --watchAll=false",
+    "test": "jest --watchAll=false",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -20,33 +20,36 @@
     "expo-dev-client": "~6.0.15",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-web": "^0.21.0",
-
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
-    "babel-jest": "29.7.0",
-    "babel-preset-expo": "^10.0.0",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "@testing-library/react-native": "^12.5.1",
-
-    "react-test-renderer": "19.1.0",
-
-    "eslint": "^9.37.0",
     "@eslint/js": "^9.37.0",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "29.5.14",
+    "babel-jest": "29.7.0",
+    "babel-preset-expo": "~54.0.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-native": "^5.0.0",
-    "globals": "^13.24.0"
+    "globals": "^13.24.0",
+    "jest": "~29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-expo": "~54.0.12"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
   }
 }
