--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
     "@eslint/js": "^9.37.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "29.5.14",
     "babel-jest": "29.7.0",
@@ -47,12 +48,7 @@
     "globals": "^13.24.0",
     "jest": "~29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-expo": "~54.0.12"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
-    ]
+    "jest-expo": "~54.0.12",
+    "jest-fetch-mock": "^3.0.3"
   }
 }
