--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -88,3 +88,58 @@ jobs:
         run: |
           cd "code/Study buddy/backend/"
           npm test
+
+  # Ensure Dockerfiles build successfully (no push)
+  docker-build:
+    name: Dockerfiles Build (backend + frontend)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build backend image
+        run: |
+          docker build \
+            -t studybuddy-backend:ci \
+            -f "code/Study buddy/backend/Dockerfile" \
+            "code/Study buddy/backend"
+
+      - name: Build frontend image
+        run: |
+          docker build \
+            -t studybuddy-frontend:ci \
+            -f "code/Study buddy/frontend/Dockerfile" \
+            "code/Study buddy/frontend"
+
+  # Optionally run tests inside the built images for reproducibility
+  tests-in-docker:
+    name: Run Tests in Docker Images
+    runs-on: ubuntu-latest
+    needs: docker-build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build backend image (cache)
+        run: |
+          docker build -t studybuddy-backend:ci -f "code/Study buddy/backend/Dockerfile" "code/Study buddy/backend"
+
+      - name: Build frontend image (cache)
+        run: |
+          docker build -t studybuddy-frontend:ci -f "code/Study buddy/frontend/Dockerfile" "code/Study buddy/frontend"
+
+      - name: Backend tests in Docker
+        run: |
+          docker run --rm -w /app studybuddy-backend:ci npm test
+
+      - name: Frontend tests in Docker
+        env:
+          CI: true
+        run: |
+          docker run --rm -w /app studybuddy-frontend:ci npm test
