--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -13,7 +13,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.10",
@@ -37,19 +36,23 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
     "@eslint/js": "^9.37.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "29.5.14",
-    "babel-jest": "29.7.0",
+    "babel-jest": "^29.7.0",
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-native": "^5.0.0",
     "globals": "^13.24.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "~29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-expo": "~54.0.12",
-    "jest-fetch-mock": "^3.0.3"
+    "jest-fetch-mock": "^3.0.3",
+    "react-test-renderer": "^19.2.0"
   }
 }
