Revert "ci(frontend): remove expo install --fix from Dockerfile to avoid peer-dep conflicts in CI"
This reverts commit 4b075a0c1873fb06a9f03eb5900d37df5807e58a.

--- a/code/Study buddy/frontend/Dockerfile
+++ b/code/Study buddy/frontend/Dockerfile
@@ -25,6 +25,8 @@ COPY eslint.config.js ./
 # Install deps reproducibly
 RUN npm ci
 
+# Run expo’s version alignments during build
+RUN npx expo install --fix && npx expo install expo@latest || true
 
 # Copy the rest of the app
 COPY . .
