--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -16,15 +16,15 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~54.0.10",
+    "expo": "~54.0.21",
     "expo-checkbox": "~5.0.7",
-    "expo-dev-client": "~6.0.15",
+    "expo-dev-client": "~6.0.16",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.546.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-native": "0.81.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
@@ -36,6 +36,7 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
     "@eslint/js": "^9.37.0",
+    "@expo/ngrok": "^4.1.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "29.5.14",
@@ -48,7 +49,11 @@
     "globals": "^13.24.0",
     "jest": "~29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-expo": "~54.0.12",
-    "jest-fetch-mock": "^3.0.3"
+    "jest-expo": "~54.0.13",
+    "jest-fetch-mock": "^3.0.3",
+    "@expo/ngrok": "^4.1.0"
+  },
+  "overrides": {
+    "react-test-renderer": "19.1.0"
   }
 }
