--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,17 +39,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd "code/Study buddy/frontend/"
-          npm install
-
-      - name: Install ESLint
-        run: |
-          cd "code/Study buddy/frontend/"
-          npm install eslint eslint-plugin-react eslint-plugin-react-hooks --save-dev
+          npm ci
 
       - name: Lint React code
         run: |
           cd "code/Study buddy/frontend/"
-          npx eslint . --fix || true
+          npm run lint
 
       - name: Run React Unit Tests
         run: |
@@ -72,17 +67,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd "code/Study buddy/backend/"
-          npm install
-
-      - name: Install ESLint
-        run: |
-          cd "code/Study buddy/backend/"
-          npm install eslint eslint-plugin-react eslint-plugin-react-hooks --save-dev
+          npm ci
 
       - name: Lint Backend code
         run: |
           cd "code/Study buddy/backend/"
-          npx eslint . --fix || true
+          npm run lint
 
       - name: Run Backend Tests
         run: |
@@ -90,8 +80,8 @@ jobs:
           npm test
 
   # Ensure Dockerfiles build successfully (no push)
-  docker-build:
-    name: Dockerfiles Build (backend + frontend)
+  tests-in-docker:
+    name: Run Tests in Docker Images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -102,35 +92,9 @@ jobs:
 
       - name: Build backend image
         run: |
-          docker build \
-            -t studybuddy-backend:ci \
-            -f "code/Study buddy/backend/Dockerfile" \
-            "code/Study buddy/backend"
-
-      - name: Build frontend image
-        run: |
-          docker build \
-            -t studybuddy-frontend:ci \
-            -f "code/Study buddy/frontend/Dockerfile" \
-            "code/Study buddy/frontend"
-
-  # Optionally run tests inside the built images for reproducibility
-  tests-in-docker:
-    name: Run Tests in Docker Images
-    runs-on: ubuntu-latest
-    needs: docker-build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build backend image (cache)
-        run: |
           docker build -t studybuddy-backend:ci -f "code/Study buddy/backend/Dockerfile" "code/Study buddy/backend"
 
-      - name: Build frontend image (cache)
+      - name: Build frontend image
         run: |
           docker build -t studybuddy-frontend:ci -f "code/Study buddy/frontend/Dockerfile" "code/Study buddy/frontend"
 
