hotfix: Docker+Expo runbook, compose cleanup, frontend auth feedback (#26)
* docs(readme): add Docker + Expo runbook and troubleshooting

chore(compose): remove obsolete version, drop misleading frontend API_BASE_URL env

chore(backend): add .dockerignore to avoid host node_modules and junk

feat(frontend): show auth error messages; keep debug logs during development

* chore(gitignore): ignore frontend .env and backend sqlite db files

* chore(docker): update backend+frontend Dockerfiles for dev (node 22, reproducible npm ci, expo tunnel)

* ci: build Dockerfiles and run tests inside Docker images

* chore(frontend): align lockfile with React 19.2.0 to satisfy react-test-renderer peer

* ci(frontend): remove expo install --fix from Dockerfile to avoid peer-dep conflicts in CI

* chore(frontend): align Expo SDK 54 deps (expo ~54.0.21, dev-client ~6.0.16, react/react-dom 19.1.0, react-native 0.81.5, jest-expo ~54.0.13). Ensure no react-test-renderer in package.json

* Revert "chore(frontend): align Expo SDK 54 deps (expo ~54.0.21, dev-client ~6.0.16, react/react-dom 19.1.0, react-native 0.81.5, jest-expo ~54.0.13). Ensure no react-test-renderer in package.json"

This reverts commit 458e5148d599f882e9d108e2c882e57644fabbf5.

* Revert "ci(frontend): remove expo install --fix from Dockerfile to avoid peer-dep conflicts in CI"

This reverts commit 4b075a0c1873fb06a9f03eb5900d37df5807e58a.

* chore: refresh deps and simplify expo tunnel setup

* test(frontend): stub fast refresh globals for jest

* ci: streamline workflow linting and docker jobs

* chore(frontend): declare jest global in setup file

* test(frontend): note fetchMock global in LoginForm test

* docs: document lint/test commands and CI workflow

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,17 +39,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd "code/Study buddy/frontend/"
-          npm install
-
-      - name: Install ESLint
-        run: |
-          cd "code/Study buddy/frontend/"
-          npm install eslint eslint-plugin-react eslint-plugin-react-hooks --save-dev
+          npm ci
 
       - name: Lint React code
         run: |
           cd "code/Study buddy/frontend/"
-          npx eslint . --fix || true
+          npm run lint
 
       - name: Run React Unit Tests
         run: |
@@ -72,19 +67,43 @@ jobs:
       - name: Install dependencies
         run: |
           cd "code/Study buddy/backend/"
-          npm install
-
-      - name: Install ESLint
-        run: |
-          cd "code/Study buddy/backend/"
-          npm install eslint eslint-plugin-react eslint-plugin-react-hooks --save-dev
+          npm ci
 
       - name: Lint Backend code
         run: |
           cd "code/Study buddy/backend/"
-          npx eslint . --fix || true
+          npm run lint
 
       - name: Run Backend Tests
         run: |
           cd "code/Study buddy/backend/"
           npm test
+
+  # Ensure Dockerfiles build successfully (no push)
+  tests-in-docker:
+    name: Run Tests in Docker Images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build backend image
+        run: |
+          docker build -t studybuddy-backend:ci -f "code/Study buddy/backend/Dockerfile" "code/Study buddy/backend"
+
+      - name: Build frontend image
+        run: |
+          docker build -t studybuddy-frontend:ci -f "code/Study buddy/frontend/Dockerfile" "code/Study buddy/frontend"
+
+      - name: Backend tests in Docker
+        run: |
+          docker run --rm -w /app studybuddy-backend:ci npm test
+
+      - name: Frontend tests in Docker
+        env:
+          CI: true
+        run: |
+          docker run --rm -w /app studybuddy-frontend:ci npm test
