--- a/code/Study buddy/frontend/Dockerfile
+++ b/code/Study buddy/frontend/Dockerfile
@@ -1,33 +1,37 @@
 # 90% AI generated
 # 10% manual bug fixing
 
-
-# Use Debian (not Alpine) so Expo/Metro deps are available & easy to install
 FROM node:22-bullseye
 
-# Helpful env for dev inside containers
-ENV EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0 \
+ENV NODE_ENV=development \
+    HOME=/app \
+    NPM_CONFIG_CACHE=/app/.npm \
+    EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0 \
     CHOKIDAR_USEPOLLING=true \
     WATCHPACK_POLLING=true
 
 WORKDIR /app
 
-# Install system tools commonly needed by Expo/Metro and native deps
+# System tools some expo deps want
 RUN apt-get update && apt-get install -y --no-install-recommends \
     bash git python3 make g++ \
  && rm -rf /var/lib/apt/lists/*
 
-
-# Install deps first for better layer caching
+# Copy manifests first for better caching
 COPY package*.json ./
 COPY babel.config.js ./
 COPY eslint.config.js ./
-RUN --mount=type=cache,target=/root/.npm npm ci || true
 
-# Bring in the app
+# Install deps reproducibly
+RUN npm ci
+
+# Copy the rest of the app
 COPY . .
 
-# Typical Expo/Metro ports
+# Create runtime dirs (inside container) so expo/metro can write
+RUN mkdir -p /app/.npm /app/.expo /app/.expo-shared
+
 EXPOSE 8081 19000 19001 19002 19006
 
-CMD ["bash", "-lc", "npx expo start --dev-client --web --host lan"]
+# Start in tunnel mode so phones off-LAN can connect
+CMD ["bash", "-lc", "exec npx expo start --host tunnel"]
