--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -29,6 +29,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.4.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
@@ -50,8 +51,7 @@
     "jest": "~29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-expo": "~54.0.13",
-    "jest-fetch-mock": "^3.0.3",
-    "@expo/ngrok": "^4.1.0"
+    "jest-fetch-mock": "^3.0.3"
   },
   "overrides": {
     "react-test-renderer": "19.1.0"
