--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
     "@eslint/js": "^9.37.0",
     "@expo/ngrok": "^4.1.0",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "29.5.14",
