--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-testing-library": "^7.13.3",
     "globals": "^13.24.0",
     "jest": "~29.7.0",
     "jest-environment-jsdom": "29.7.0",
