--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -10,7 +10,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll=false",
-    "lint": "eslint ."
+    "lint": "eslint \"App.js\" \"AuthContext.js\" \"components/**/*.js\" \"screens/**/*.js\" \"dataInterface/**/*.js\""
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
