--- a/code/Study buddy/backend/package.json
+++ b/code/Study buddy/backend/package.json
@@ -1,11 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
     "test": "jest --detectOpenHandles",
     "lint": "eslint ."
+
   },
   "keywords": [],
   "author": "",
@@ -23,14 +25,13 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "eslint": "^9.37.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-native": "^5.0.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.4"
-  },
-  "description": ""
+    "supertest": "^7.1.4",
+    "eslint": "^9.37.0",
+    "@eslint/js": "^9.37.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-native": "^5.0.0"
+  }
 }
