--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "base-64": "^1.0.0",
     "expo": "~54.0.21",
     "expo-checkbox": "~5.0.7",
     "expo-dev-client": "~6.0.16",
