--- a/code/Study buddy/backend/package.json
+++ b/code/Study buddy/backend/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "glob": "^10.5.0",
+    "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
