--- a/code/Study buddy/frontend/package.json
+++ b/code/Study buddy/frontend/package.json
@@ -24,6 +24,8 @@
     "expo-dev-client": "~6.0.16",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "glob": "^10.5.0",
+    "js-yaml": "^4.1.1",
     "lucide-react-native": "^0.546.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
