--- a/code/Study buddy/backend/package.json
+++ b/code/Study buddy/backend/package.json
@@ -35,5 +35,10 @@
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
   },
+  "overrides": {
+    "@istanbuljs/load-nyc-config": {
+      "js-yaml": "3.14.2"
+    }
+  },
   "description": ""
 }
