Adjust CodeQL and workflows to run only on PR's rather than push

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,7 +10,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - '**' 
+      - 'main'  # Run on pushes to main branch
     paths:
       - "code/Study buddy/frontend/**"
       - "code/Study buddy/backend/**"
