--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -18,59 +18,6 @@ permissions:
   actions: read
 
 jobs:
-  sast-codeql:
-    name: SAST (CodeQL)
-    runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-      contents: read
-      actions: read
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [javascript]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: ${{ matrix.language }}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-      - name: Analyze
-        uses: github/codeql-action/analyze@v3
-        with:
-          output: codeql-results
-      - name: Fail on CodeQL alerts
-        run: |
-          set -euo pipefail
-          python - <<'PY'
-          import glob, json, os, sys
-
-          sarifs = []
-          sarifs += glob.glob("codeql-results/**/*.sarif", recursive=True)
-          sarifs += glob.glob("codeql-results/*.sarif")
-          runner_temp = os.environ.get("RUNNER_TEMP")
-          if runner_temp:
-              sarifs += glob.glob(os.path.join(runner_temp, "**", "*.sarif"), recursive=True)
-          if not sarifs:
-              print("No CodeQL SARIF files found (workspace or runner temp); assuming 0 results.")
-              sys.exit(0)
-
-          total = 0
-          for path in sarifs:
-              with open(path, "r", encoding="utf-8") as f:
-                  data = json.load(f)
-              for run in data.get("runs", []):
-                  total += len(run.get("results", []))
-
-          if total > 0:
-              print(f"CodeQL found {total} result(s); failing the job.")
-              sys.exit(1)
-
-          print("CodeQL found 0 results; continuing.")
-          PY
-
   sca-osv:
     name: SCA (OSV Scanner)
     runs-on: ubuntu-latest
@@ -117,7 +64,7 @@ jobs:
         run: |
           set -euo pipefail
           python - <<'PY'
-          import json, os, sys
+          import json, os
 
           input_path = "trufflehog.json"
           output_path = "trufflehog.sarif"
@@ -172,7 +119,6 @@ jobs:
               json.dump(sarif, out, ensure_ascii=False, indent=2)
 
           if not os.path.exists(output_path):
-              # Ensure an empty SARIF exists so upload doesn't fail
               empty = {
                   "version": "2.1.0",
                   "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
