--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,7 +10,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - '**'  # Run on pushes to main branch
+      - '**'  # Run on PRs from any branch
     paths:
       - "code/Study buddy/frontend/**"
       - "code/Study buddy/backend/**"
